--- a/backendshopping/pom.xml
+++ b/backendshopping/pom.xml
@@ -22,4 +22,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+  <build>
+	<plugins>
+		<!-- Update to latest version JAVA -->
+		<plugin>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.1</version>
+			<configuration>
+				<source>11</source>
+				<target>11</target>
+			</configuration>
+		</plugin>
+	</plugins>
+</build>
 </project>
