--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -7,15 +7,56 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>onlineshopping Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+  	<javaee.version>7.0</javaee.version>
+  	<spring.version>5.1.5.RELEASE</spring.version>
+  </properties>
   <dependencies>
+  <!-- JAVA EE API -->
+	<dependency>
+	   <groupId>javax</groupId>
+	   <artifactId>javaee-api</artifactId>
+	   <version>${javaee.version}</version>
+	   <scope>provided</scope>
+	</dependency>
+	
+  <!-- JUINT -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- SPRING WEB MVC -->
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-webmvc</artifactId>
+	    <version>${spring.version}</version>
+	</dependency>
+	
+	<!-- JSTL -->
+	<dependency>
+	    <groupId>jstl</groupId>
+	    <artifactId>jstl</artifactId>
+	    <version>1.2</version>
+	</dependency>
+        
   </dependencies>
+  
   <build>
     <finalName>onlineshopping</finalName>
+    
+    <plugins>
+    <!-- Update to latest version JAVA -->
+    	<plugin>
+	        <artifactId>maven-compiler-plugin</artifactId>
+	        <version>3.1</version>
+	        <configuration>
+	        	<source>11</source>
+	        	<target>11</target>
+	        </configuration>
+        </plugin>
+    </plugins>
   </build>
 </project>
